Added base HTML structure

--- a/src/sass/partials/_config.sass
+++ b/src/sass/partials/_config.sass
@@ -1,22 +1,23 @@
 // --- General Colors
 $white: #ffffff
-$black: #000000
+$black: #2A2A2A
 $red: #DB5757
 $grey: #5F5E5E
 $grey-medium: #A09F9F
 $grey-lite: #D2D2D2
 $grey-ultralite: #DDDDDD
+$gc-red: #E64946
 
 $base-color: $black
-$text-color: $grey
-$link-color: $red
+$text-color: $grey-ultralite
+$link-color: $gc-red
 $placeholder: #bababa
 
 // Background Colors
 $bg: #eeeeee
-$bg-header: $white 
+$bg-header: $black
 $bg-footer: $white 
-$bg-menu: $grey-ultralite
+$bg-menu: $black
 $bg-quote: $bg
 $bg-table-row: $bg
 $bg-slider: $bg
