--- a/src/sass/styles.sass
+++ b/src/sass/styles.sass
@@ -2,3 +2,7 @@
 @import partials/_functions
 @import partials/_config
 @import partials/_reset
+
+@import partials/_base
+@import partials/_header
+@import partials/_menu
