--- a/src/sass/partials/_config.sass
+++ b/src/sass/partials/_config.sass
@@ -9,7 +9,7 @@ $grey-ultralite: #DDDDDD
 $gc-red: #E64946
 
 $base-color: $black
-$text-color: $grey-ultralite
+$text-color: $black
 $link-color: $gc-red
 $placeholder: #bababa
 
