--- a/src/sass/partials/_functions.sass
+++ b/src/sass/partials/_functions.sass
@@ -22,6 +22,10 @@
 // ----------------------------------
 // 10. Sonstiges
 // ----------------------------------
+// 11. Projekt spezifisch
+// ----------------------------------
+
+
 
 // --- 1. Gradients ---
 
