--- a/src/sass/partials/_header.sass
+++ b/src/sass/partials/_header.sass
@@ -23,9 +23,8 @@
 
   img
     display: block
-    height: rem(30)
-    width: rem(60)
-    margin-top: rem(-5)
+    height: rem(22)
+    width: rem(38)
 
 .header__title
   color: $text-color
@@ -33,7 +32,7 @@
   line-height: 1.2em
   text-overflow: ellipsis
   overflow: hidden
-  padding: rem(11) rem(60) 0 rem(60)
+  padding: rem(11) rem(44) 0 rem(44)
   width: 100%
   white-space: nowrap
 
@@ -48,15 +47,15 @@
 
 .header__btn--menu
   background-image: url(#{$img}btn-menu.svg)
-  background-position: 50% 50%
+  background-position: rem(1) 50%
   background-repeat: no-repeat
   background-size: rem(28) rem(22)
-  right: rem(15)
+  right: rem(0)
 
 .header__btn--back
   background-image: url(#{$img}chevron-left-small.svg)
-  background-position: 0 50%
+  background-position: 50% 50%
   background-repeat: no-repeat
   background-size: rem(13) rem(21)
-  left: rem(15)
+  left: rem(0)
 
