Added Guest pages

--- a/src/sass/partials/_article.sass
+++ b/src/sass/partials/_article.sass
@@ -130,7 +130,7 @@
       content: ""
 
 .image-wrapper--top
-  margin: rem(-30) 0 rem(20) 0
+  margin: 0 0 rem(20) 0
   height: auto
   width: 100%
   z-index: 50
@@ -162,14 +162,6 @@
 
   .page-next
     right: 0
-
-  .image-wrapper--top
-    margin-top: rem(-20)
-
-@media (max-width: 768px)
-
-  .image-wrapper--top
-    margin-top: rem(-15)
 
 @media (max-width: 767px)
 
