--- a/src/sass/partials/_config.sass
+++ b/src/sass/partials/_config.sass
@@ -10,13 +10,14 @@ $gc-red: #E64946
 
 $base-color: $black
 $text-color: $black
+$inverse-text-color: $grey-ultralite
 $link-color: $gc-red
 $placeholder: #bababa
 
 // Background Colors
 $bg: #eeeeee
 $bg-header: $black
-$bg-footer: $white 
+$bg-footer: $black
 $bg-menu: $black
 $bg-quote: $bg
 $bg-table-row: $bg
