--- a/src/sass/partials/_header.sass
+++ b/src/sass/partials/_header.sass
@@ -27,7 +27,7 @@
     width: rem(38)
 
 .header__title
-  color: $text-color
+  color: $inverse-text-color
   font-size: rem(18)
   line-height: 1.2em
   text-overflow: ellipsis
