--- a/src/sass/partials/_menu.sass
+++ b/src/sass/partials/_menu.sass
@@ -27,7 +27,7 @@
     border-bottom: 1px solid $white
 
 .menu__list-item
-  color: $grey-ultralite
+  color: $inverse-text-color
   display: block
   padding: rem(15) 0
   margin-bottom: auto
