--- a/src/sass/styles.sass
+++ b/src/sass/styles.sass
@@ -1,9 +1,12 @@
 // --- Partials --- //
 @import partials/_functions
 @import partials/_config
-@import partials/_reset
 
+@import partials/external-css/swiper.min.scss
+
+@import partials/_reset
 @import partials/_base
 @import partials/_header
 @import partials/_menu
 @import partials/_article
+@import partials/_footer
