Added Guest pages

--- a/src/sass/partials/_base.sass
+++ b/src/sass/partials/_base.sass
@@ -42,7 +42,7 @@ a[href^=tel]
   padding: rem(44) 0
   height: 100%
   width: 100%
-  background-image: url(#{$img}bg-light.png)
+  background-image: url(#{$img}bg-light.jpg)
   background-repeat: no-repeat
   background-size: cover
   background-position: center
