--- a/src/sass/partials/_base.sass
+++ b/src/sass/partials/_base.sass
@@ -51,7 +51,8 @@ a[href^=tel]
   .page__content
     padding: rem(15) rem(15) 0 rem(15)
     margin: rem(15) rem(15) 0 rem(15)
-    background-color: rgba(255, 255, 255, 0.5)
+    background-color: rgba($white, 0.5)
+    min-height: 100%
 
 .content__inner--secondary
   .page__content
