--- a/src/sass/partials/_base.sass
+++ b/src/sass/partials/_base.sass
@@ -52,7 +52,7 @@ a[href^=tel]
     padding: rem(15) rem(15) 0 rem(15)
     margin: rem(15) rem(15) 0 rem(15)
     background-color: rgba($white, 0.5)
-    min-height: 100%
+    //min-height: 100%
 
 .content__inner--secondary
   .page__content
