- Added Panel Slider - Optimized service worker

--- a/src/sass/partials/_config.sass
+++ b/src/sass/partials/_config.sass
@@ -25,6 +25,15 @@ $bg-slider: $bg
 $bg-grid: $bg
 $bg-overlay: $white
 
+// Panel Colors
+$tile-central: rgb(255, 153, 0)
+$tile-community: rgb(147, 196, 125)
+$tile-general: rgb(255, 217, 102)
+$tile-guest: rgb(111, 168, 220)
+$tile-signing: rgb(217, 217, 217)
+$tile-evening: rgb(224, 102, 102)
+$tile-special: rgb(0, 32, 96)
+
 // Border Colors
 $border-input: $grey-lite
 $border-header: $grey-lite
